Fix code white space

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,3 @@
      background-color: #f7f9fc;
      font-feature-settings: 'tnum';
  }
- 
- code {
-     white-space: nowrap;
- }
